Set faker locale with Korean

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -222,9 +222,11 @@
     "Good Manual Warehousings": "상품 수동 재고 조정",
     "Good Per Day": "일별 상품",
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
+    "Good Sum Cost Price": "상품 총매입가",
     "Goods": "상품 리스트",
     "Goods Division Color": "상품 구분색",
     "Goods Nm": "상품명",
+    "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
     "Goods Price Holapetshop": "올라펫샵판매가",
     "GoodsNm": "상품명",
@@ -264,6 +266,10 @@
     "Inventory": "재고 수량",
     "Inventory Adjustment": "재고 조정",
     "Inventory History": "재고 이력",
+    "Inventory Level 1": "재고 1등급",
+    "Inventory Level 2": "재고 2등급",
+    "Inventory Level 3": "재고 3등급",
+    "Inventory Level 4": "재고 4등급",
     "Inventory Multiply Cost Price": "재고x매입가",
     "Invoice": "송장",
     "Invoice Company": "송장 회사",
@@ -287,7 +293,7 @@
     "Is Parceled": "택배 유무",
     "Is Playauto Done": "플레이오토 처리 됨",
     "Is Promotion": "프로모션 여부",
-    "Is Requested Reborn": "판매 중지 취소 요청",
+    "Is Requested Reborn": "     취소 요청",
     "Is Requested Shutdown": "판매중지 요청",
     "Is Runout": "품절여부",
     "Is Sent": "발송 여부",
@@ -402,7 +408,9 @@
     "Not Implemented": "구현되지 않음",
     "Not Modified": "수정되지 않음",
     "of": "의",
+    "Off Sale": "판매중지",
     "OK": "좋아요",
+    "On Sale": "판매중",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "계정을 삭제하면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 삭제하기 전에 유지하려는 필요한 데이터 또는 정보를 다운로드하세요.",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "계정이 삭제되면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 영구적으로 삭제할 것인지 확인하기 위해 암호를 입력하십시오.",
     "Open": "열려 있는",
@@ -432,6 +440,7 @@
     "Order Date": "주문 일",
     "Order Discount Percent": "발주 할인(%)",
     "Order From Order Sheet Invoice": "주문서 송장에서 주문 추출",
+    "Order Good": "주문상품",
     "Order Good Count": "주문상품수",
     "Order Good Type": "주문상품타입",
     "Order Method": "발주 방법",
@@ -556,12 +565,12 @@
     "Retry With": "재시도",
     "Role": "역할",
     "Row Count": "행수",
-    "Safe Class": "판매 등급",
-    "Safe Class 1": "판매 1등급",
-    "Safe Class 2": "판매 2등급",
-    "Safe Class 3": "판매 3등급",
-    "Safe Class D": "판매 D등급",
-    "Safe Class X": "판매 X등급",
+    "Safe Class": "재고등급",
+    "Safe Class 1": "재고 1등급",
+    "Safe Class 2": "재고 2등급",
+    "Safe Class 3": "재고 3등급",
+    "Safe Class D": "재고 D등급",
+    "Safe Class X": "재고 X등급",
     "Safe Inventory": "안전 재고",
     "Sale Count Per Day": "일별 판매갯수",
     "Sale Price Per Day": "일별 판매금액",
@@ -577,6 +586,8 @@
     "See Other": "기타 보기",
     "Select": "선택",
     "Select All": "모두 선택",
+    "Sell Goods Per Center Class": "센터등급별 판매상품수",
+    "Sell Goods Per Safe Class": "재고등급별 판매상품수",
     "Send": "보내다",
     "Send Password Reset Link": "비밀번호 재설정 링크 보내기",
     "Sent": "발송일시",
@@ -744,6 +755,7 @@
     "Web Server is Down": "웹 서버가 다운되었습니다",
     "Wemake Categories": "위메프 카테고리",
     "Whoops!": "저런!",
+    "Won": "원",
     "Word": "단어",
     "Worker": "실행 담당자",
     "Yes": "예",
