Redesign status fields

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -129,6 +129,7 @@
     "Daily Registered User Count": "신규회원수",
     "Dashboard": "대시보드",
     "Dashboards": "대시보드",
+    "Dates": "...날짜",
     "Delete": "삭제",
     "Delete :name": ":name 삭제",
     "Delete Account": "계정 삭제",
@@ -270,6 +271,7 @@
     "Inventory Level 2": "재고 2등급",
     "Inventory Level 3": "재고 3등급",
     "Inventory Level 4": "재고 4등급",
+    "Inventory Level X": "재고 X등급",
     "Inventory Multiply Cost Price": "재고x매입가",
     "Invoice": "송장",
     "Invoice Company": "송장 회사",
@@ -515,6 +517,7 @@
     "Precondition Required": "전제 조건 필요",
     "Predict Warehoused": "예상입고날짜",
     "Predict Warehoused At": "입고예정일시",
+    "Predict Warehousing": "예상입고",
     "Preset *corporation Good Code": "*업체상품코드",
     "Preset Sku Code": "SKU코드",
     "Preview": "프리뷰",
@@ -590,6 +593,7 @@
     "Sell Goods Per Safe Class": "재고등급별 판매상품수",
     "Send": "보내다",
     "Send Password Reset Link": "비밀번호 재설정 링크 보내기",
+    "Sending": "발송",
     "Sent": "발송일시",
     "Sent At": "발송일시",
     "Server Error": "서버 오류",
