Add and fix model relations on views and nova resources

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -38,7 +38,7 @@
     "Associate": "연관짓다",
     "Attach": "첨부",
     "Attribute": "속성",
-    "Author": "작성자",
+    "Author": "등록",
     "Avatar": "아바타",
     "B2b Goods": "B2B 상품",
     "Bad Gateway": "잘못된 게이트웨이",
@@ -58,6 +58,7 @@
     "Box Inventory History": "박스 재고 이력",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
+    "Box Order Boxes": "박스 발주 박스",
     "Box Orders": "박스 발주서",
     "Box Price": "박스 가격",
     "Box Supplier": "박스 공급사",
@@ -475,6 +476,7 @@
     "Orders": "주문",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
+    "Original Master Code": "원본 마스터 코드",
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
@@ -498,6 +500,7 @@
     "Placing Order Good": "발주 상품",
     "Placing Order Good Id": "발주상품아이디",
     "Placing Order Good Per Day": "일별 발주상품",
+    "Placing Order Goods": "발주 상품",
     "Placing Order Id": "발주아이디",
     "Placing Orders": "발주서",
     "PlacingOrder Order Date": "발주일",
@@ -532,6 +535,8 @@
     "Processing": "처리",
     "Profile": "프로필",
     "Profile Information": "프로필 정보",
+    "Promotion Codable": "프로모션 코드 종류",
+    "Promotion Code": "프로모션 코드",
     "Promotion Codes": "프로모션 코드",
     "Proxy Authentication Required": "프록시 인증 필요",
     "Quantity": "수량",
