Run `artisan lang:update`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -61,6 +61,8 @@
     "Box Order Boxes": "박스 발주 박스",
     "Box Orders": "박스 발주서",
     "Box Price": "박스 가격",
+    "Box Sum Cost Price": "박스 총매입가",
+    "Box Sum Inventory": "박스 총재고",
     "Box Supplier": "박스 공급사",
     "Boxes": "박스",
     "Brand": "브랜드",
