--- a/lang/ko.json
+++ b/lang/ko.json
@@ -50,16 +50,16 @@
     "Barcode Commands": "바코드 커맨드",
     "Barcode Image": "바코드 이미지",
     "Barcode Test": "바코드 테스트",
-    "Basic Good": "기본 상품",
+    "Basic Good": "일반상품",
     "Before proceeding, please check your email for a verification link.": "진행하기 전에 이메일에 인증 링크를 확인하십시오.",
     "Box": "박스",
     "Box Barcode": "박스 바코드",
     "Box Count": "박스 수량",
-    "Box Inventory History": "박스 재고 이력",
+    "Box Inventory History": "박스 재고(입출고) 이력",
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
-    "Box Order Boxes": "박스 발주 박스",
     "Box Orders": "박스 발주서",
+    "Box Placing Order And Warehousing": "박스 발주 및 입고",
     "Box Price": "박스 가격",
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
@@ -269,7 +269,7 @@
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
     "Inventory Adjustment": "재고 조정",
-    "Inventory History": "재고 이력",
+    "Inventory History": "재고(입출고) 이력",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
     "Inventory Level 3": "재고 3등급",
@@ -350,9 +350,9 @@
     "Margin 3 Percent Price": "3%마진가",
     "Margin 5 Percent Price": "5%마진가",
     "Margin Zero Percent Price": "0%마진가",
-    "Master Code": "마스터 코드",
+    "Master Code": "마스터코드",
     "Master Goods Cd": "마스터 상품코드",
-    "MasterGoodsCd": "플레이오토 마스터 코드",
+    "MasterGoodsCd": "플레이오토 마스터코드",
     "MemId": "회원 아이디",
     "MemNm": "회원 이름",
     "MemNo": "회원 번호",
@@ -428,9 +428,9 @@
     "Option Cost Price": "옵션매입가격",
     "Option Count": "옵션수",
     "Option Good": "옵션상품",
-    "Option Good Option": "옵션 상품 옵션",
-    "Option Good Options": "옵션 상품 옵션",
-    "Option Goods": "옵션 상품",
+    "Option Good Option": "옵션상품 옵션",
+    "Option Good Options": "옵션상품 옵션",
+    "Option Goods": "옵션상품",
     "Option Image": "옵션이미지",
     "Option Name": "옵션명",
     "Option Price": "옵션가격",
@@ -478,7 +478,7 @@
     "Orders": "주문",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
-    "Original Master Code": "원본 마스터 코드",
+    "Original Master Code": "원본 마스터코드",
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
@@ -498,6 +498,8 @@
     "Picking Zone": "피킹존",
     "Picking Zones": "피킹존",
     "Placing Order": "발주",
+    "Placing Order And Warehousing": "상품 발주 및 입고",
+    "Placing Order Boxes": "발주 박스",
     "Placing Order Count": "발주횟수",
     "Placing Order Good": "발주 상품",
     "Placing Order Good Id": "발주상품아이디",
@@ -530,6 +532,7 @@
     "Price": "가격",
     "Price Coefficient": "가격 계수",
     "Price Coefficients": "가격 계수",
+    "Print Barcode Commands": "바코드 커맨드 출력",
     "Print Classification": "출력분류",
     "Printed": "프린트여부",
     "Printed At": "프린트일시",
@@ -554,8 +557,8 @@
     "RegDt": "등록일시",
     "Regist Date": "등록일",
     "Register": "회원가입",
-    "Register Good Requests": "상품등록요청",
-    "Register Option Good Request": "옵션 상품 등록 요청",
+    "Register Good Requests": "상품등록/수정요청",
+    "Register Option Good Request": "옵션상품 등록/수정 요청",
     "Related Ct Order Goods": "관련 발주 상품 리스트",
     "Remember Me": "로그인 상태 유지",
     "Remember me": "로그인 상태 유지",
@@ -605,10 +608,11 @@
     "Sent At": "발송일시",
     "Server Error": "서버 오류",
     "Service Unavailable": "서비스를 사용할 수 없습니다.",
+    "Services": "서비스",
     "Session Has Expired": "세션이 만료됨",
-    "Set Goods": "세트 상품",
+    "Set Goods": "세트상품",
     "SetGood Playauto Master Code": "세트상품 플레이오토마스터코드",
-    "Setting": "세팅",
+    "Setting": "설정",
     "Settings": "설정",
     "Ship Quantity": "배송 수량(주문 단위)",
     "Shippable": "배송가능",
@@ -620,6 +624,7 @@
     "Shipping Suggested Selling Price": "출고 판매제안가",
     "Shipping Unit Price": "출고 단가",
     "Shorten Code": "축약 코드",
+    "Shortening Master Code": "축약 마스터코드",
     "Show": "보여주다",
     "Show :name": "쇼 :name",
     "Show All": "모두 보이기",
