Update the localizing file

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -494,8 +494,8 @@
     "Payment Required": "결제 필요",
     "Permanent Redirect": "영구 리디렉션",
     "Phone": "전화",
-    "Picking Box Number": "피킹박스 번호",
     "Picking Zone": "피킹존",
+    "Picking Zone Number": "피킹존 번호",
     "Picking Zones": "피킹존",
     "Placing Order": "발주",
     "Placing Order And Warehousing": "상품 발주 및 입고",
@@ -756,6 +756,7 @@
     "Use Proxy": "프록시 사용",
     "User": "사용자",
     "Username": "로그인아이디",
+    "Users": "사용자",
     "Validator": "검수인",
     "Variant Also Negotiates": "변형도 협상",
     "Verify Email Address": "이메일 주소 확인",
