Make `HelpfulFile` resource for importing

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -37,6 +37,9 @@
     "Assign": "양수인",
     "Associate": "연관짓다",
     "Attach": "첨부",
+    "Attachment": "첨부파일",
+    "Attachment Name": "첨부파일 이름",
+    "Attachment Size": "첨부파일 사이즈",
     "Attribute": "속성",
     "Author": "등록",
     "Avatar": "아바타",
@@ -187,6 +190,7 @@
     "Export": "내보내다",
     "Export :name": "Export :name",
     "Failed Dependency": "실패한 종속성",
+    "Failed to read excel file.": "엑셀 파일을 읽는데 실패했습니다.",
     "Featured Good List": "대표 상품(들)",
     "Featured Good Name List": "대표 상품(들)",
     "Fee Rate": "수수료율",
@@ -240,6 +244,7 @@
     "Has Supplier Monitoring Price": "공급사 가격 모니터링 여부",
     "Hello!": "안녕하세요!",
     "Help Tip": "도움말",
+    "Helpful Files": "도움파일",
     "Helpful Links": "도움되는 사이트",
     "Hide": "숨다",
     "Hide :name": ":name 숨기기",
@@ -260,6 +265,7 @@
     "Impersonation": "인격화",
     "Import": "수입",
     "Import :name": "수입 :name",
+    "Importing Goods": "상품 임포트하기",
     "Insufficient Storage": "불충분한 저장 공간",
     "Internal Server Error": "인터넷 서버 오류",
     "Internet Lowest Price": "인터넷 최저가",
@@ -558,6 +564,7 @@
     "Regist Date": "등록일",
     "Register": "회원가입",
     "Register Good Requests": "상품등록/수정요청",
+    "Register Import Files": "임포트파일 등록",
     "Register Option Good Request": "옵션상품 등록/수정 요청",
     "Related Ct Order Goods": "관련 발주 상품 리스트",
     "Remember Me": "로그인 상태 유지",
