--- a/lang/ko.json
+++ b/lang/ko.json
@@ -759,6 +759,7 @@
     "Update your account's profile information and email address.": "계정의 프로필 정보와 이메일 주소를 업데이트하세요.",
     "Updated At": "업데이트일",
     "Upgrade Required": "업그레이드 필요",
+    "Upload an Excel file (xlsx, xls, csv)": "엑셀 파일을 업로드합니다. (xlsx, xls, csv)",
     "URI Too Long": "URI가 너무 깁니다.",
     "Use Proxy": "프록시 사용",
     "User": "사용자",
