--- a/lang/ko.json
+++ b/lang/ko.json
@@ -82,6 +82,7 @@
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
     "Change Password": "비밀번호 변경",
+    "Change Status Action": "상태변경액션",
     "Channel": "채널",
     "Channel Fee": "채널 수수료",
     "Channel Fees": "채널 수수료",
@@ -609,6 +610,7 @@
     "Select All": "모두 선택",
     "Sell Goods Per Center Class": "센터등급별 판매상품수",
     "Sell Goods Per Safe Class": "재고등급별 판매상품수",
+    "Seller Good Code": "판매자상품코드",
     "Send": "보내다",
     "Send Password Reset Link": "비밀번호 재설정 링크 보내기",
     "Sending": "발송",
@@ -713,6 +715,7 @@
     "This action is unauthorized.": "이 작업은 승인되지 않았습니다.",
     "This is a secure area of the application. Please confirm your password before continuing.": "이곳은 보안 구역입니다. 진행하기 위해서 비밀번호를 입력해주세요.",
     "This password reset link will expire in :count minutes.": "이 비밀번호 재설정 링크는 :count분 후에 만료됩니다.",
+    "This value can only input by adding or updating related goods": "이 값은 연관된 상품을 등록하거나 수정할 때에만 입력됩니다.",
     "Timezone": "타임존",
     "Title": "제목",
     "to": "에",
