Improve `OderSheetInvoice` actions (#38)
* Change upload folder to `public/uploads' instead of `public/upload`

* Add a translation row

* Update `OrderSheetInvoice` seeder with files

* Change types from `DateTIme` to `Text` in order of Korean date

* Change table field from `integer` to `unsignedInteger`

* Reduce queries

* Complete upload `OrderSheetInvoice` file into `OrderShipment`

* Add `composer queue` command

* Set `BelongsToMany` between `SetGood` and `Good`

* Add `sellerGoodsCd` into `OrderSheetInvoice` model

* Add status enum for `MismatchedOrderShipment` model

* Fix small errors

* Remove `featured_good_list` from `SetGood` model

* fix temporarily https://github.com/laravel/nova-issues/issues/6700

* Add a import action for `OrderSheetInvoice` into `OrderShipment` model

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -82,6 +82,7 @@
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
     "Change Password": "비밀번호 변경",
+    "Change Status Action": "상태변경액션",
     "Channel": "채널",
     "Channel Fee": "채널 수수료",
     "Channel Fees": "채널 수수료",
@@ -265,6 +266,7 @@
     "Impersonation": "인격화",
     "Import": "수입",
     "Import :name": "수입 :name",
+    "Import Orders From Order Sheet Invoice Action": "주문서에서 주문 임포트",
     "Importing Goods": "상품 임포트하기",
     "Insufficient Storage": "불충분한 저장 공간",
     "Internal Server Error": "인터넷 서버 오류",
@@ -608,6 +610,7 @@
     "Select All": "모두 선택",
     "Sell Goods Per Center Class": "센터등급별 판매상품수",
     "Sell Goods Per Safe Class": "재고등급별 판매상품수",
+    "Seller Good Code": "판매자상품코드",
     "Send": "보내다",
     "Send Password Reset Link": "비밀번호 재설정 링크 보내기",
     "Sending": "발송",
@@ -712,6 +715,7 @@
     "This action is unauthorized.": "이 작업은 승인되지 않았습니다.",
     "This is a secure area of the application. Please confirm your password before continuing.": "이곳은 보안 구역입니다. 진행하기 위해서 비밀번호를 입력해주세요.",
     "This password reset link will expire in :count minutes.": "이 비밀번호 재설정 링크는 :count분 후에 만료됩니다.",
+    "This value can only input by adding or updating related goods": "이 값은 연관된 상품을 등록하거나 수정할 때에만 입력됩니다.",
     "Timezone": "타임존",
     "Title": "제목",
     "to": "에",
@@ -759,6 +763,7 @@
     "Update your account's profile information and email address.": "계정의 프로필 정보와 이메일 주소를 업데이트하세요.",
     "Updated At": "업데이트일",
     "Upgrade Required": "업그레이드 필요",
+    "Upload an Excel file (xlsx, xls, csv)": "엑셀 파일을 업로드합니다. (xlsx, xls, csv)",
     "URI Too Long": "URI가 너무 깁니다.",
     "Use Proxy": "프록시 사용",
     "User": "사용자",
