Improve both option good and option good options

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -437,6 +437,7 @@
     "Option Count": "옵션수",
     "Option Good": "옵션상품",
     "Option Good Option": "옵션상품 옵션",
+    "Option Good Optionable": "옵션상품 옵션종류",
     "Option Good Options": "옵션상품 옵션",
     "Option Goods": "옵션상품",
     "Option Image": "옵션이미지",
@@ -653,6 +654,7 @@
     "SmsFl": "SMS플래그",
     "SoldOutFl": "품절 여부",
     "Solve": "해결하다",
+    "Sort Order": "정렬순서",
     "Spec": "스펙",
     "SSL Handshake Failed": "SSL 핸드셰이크 실패",
     "Start": "시작",
