Do auto-complete `SetGood` prices and quantities

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -223,6 +223,7 @@
     "Good": "상품",
     "Good Classification": "상품 분류",
     "Good Code": "상품 코드",
+    "Good Count": "상품갯수",
     "Good Inventory Snapshot": "상품 재고 스냅샷",
     "Good Inventory Snapshots": "상품 재고 스냅샷",
     "Good Manual Warehousing": "상품 수동 재고 조정",
