--- a/lang/ko.json
+++ b/lang/ko.json
@@ -779,6 +779,7 @@
     "Verify Your Email Address": "이메일 주소 확인",
     "View": "뷰",
     "View :name": "보기 :name",
+    "Visit": "방문하기",
     "Warehouse Manager": "입고담당자",
     "Warehoused": "입고일시",
     "Warehoused At": "입고일시",
@@ -797,5 +798,6 @@
     "You are receiving this email because we received a password reset request for your account.": "귀하의 계정에 대한 비밀번호 재설정이 요청되어 이 메일이 발송되었습니다.",
     "You're logged in!": "로그인되었습니다!",
     "Your email address is unverified.": "이메일 주소가 확인되지 않았습니다.",
+    "Your request for regist of Option Good is completed.": "귀하의 옵션상품 등록 요청이 완료되었습니다.",
     "Zero Margin Price": "제로마진판매가"
 }
