--- a/lang/ko.json
+++ b/lang/ko.json
@@ -769,6 +769,7 @@
     "Updated At": "업데이트일",
     "Upgrade Required": "업그레이드 필요",
     "Upload an Excel file (xlsx, xls, csv)": "엑셀 파일을 업로드합니다. (xlsx, xls, csv)",
+    "Upload File Again": "다시등록하기",
     "URI Too Long": "URI가 너무 깁니다.",
     "Use Proxy": "프록시 사용",
     "User": "사용자",
