--- a/lang/ko.json
+++ b/lang/ko.json
@@ -82,7 +82,7 @@
     "Center Class": "센터 등급",
     "Center Code": "센터 코드",
     "Change Password": "비밀번호 변경",
-    "Change Status Action": "상태변경액션",
+    "Change Status Action - :status": "[:status] 로 상태변경",
     "Channel": "채널",
     "Channel Fee": "채널 수수료",
     "Channel Fees": "채널 수수료",
@@ -470,6 +470,7 @@
     "Order Quantity": "주문 수량",
     "Order Row Count": "주문 행수",
     "Order Rule": "주문 규칙",
+    "Order Sheet": "주문서",
     "Order Sheet File": "주문서 파일",
     "Order Sheet File Name": "주문서 파일 이름",
     "Order Sheet File Size": "주문서 파일 크기",
@@ -545,6 +546,7 @@
     "Price Coefficients": "가격 계수",
     "Print Barcode Commands": "바코드 커맨드 출력",
     "Print Classification": "출력분류",
+    "Print Order Sheet Invoice": "주문서 출력",
     "Printed": "프린트여부",
     "Printed At": "프린트일시",
     "Printed Count": "출력된 수",
