Add monitor screens and apis

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -290,6 +290,7 @@
     "Invoice File": "운송장 파일",
     "Invoice File Age": "송장파일나이",
     "Invoice File Name": "운송장 파일 이름",
+    "Invoice File Page": "송장파일페이지",
     "Invoice File Path": "송장파일경로",
     "Invoice File Size": "운송장 파일 크기",
     "Invoice Filepath": "운송장 파일경로",
@@ -567,6 +568,7 @@
     "Receiver Cell Phone": "수령인 휴대폰",
     "Receiver Name": "수령인 이름",
     "Receiver Phone": "수령인 전화",
+    "Receiving": "입고",
     "Record": "기록",
     "Regards,": "안부,",
     "RegDt": "등록일시",
@@ -635,6 +637,7 @@
     "Shippable": "배송가능",
     "Shipped": "배송여부",
     "Shipped At": "배송일시",
+    "Shipping": "출고",
     "Shipping Cost Price": "출고 매입가",
     "Shipping Price": "출고 금액",
     "Shipping Quantity": "출고 수량",
