--- a/lang/ko.json
+++ b/lang/ko.json
@@ -64,6 +64,7 @@
     "Box Orders": "박스 발주서",
     "Box Placing Order And Warehousing": "박스 발주 및 입고",
     "Box Price": "박스 가격",
+    "Box Quantity": "박수 수량",
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
     "Box Supplier": "박스 공급사",
@@ -278,6 +279,7 @@
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
     "Inventory Adjustment": "재고 조정",
+    "Inventory Histories": "재고 히스토리",
     "Inventory History": "재고(입출고) 이력",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
@@ -516,10 +518,10 @@
     "Placing Order And Warehousing": "상품 발주 및 입고",
     "Placing Order Boxes": "발주 박스",
     "Placing Order Count": "발주횟수",
-    "Placing Order Good": "발주 상품",
-    "Placing Order Good Id": "발주상품아이디",
-    "Placing Order Good Per Day": "일별 발주상품",
-    "Placing Order Goods": "발주 상품",
+    "Placing Order Good": "상품발주",
+    "Placing Order Good Id": "상품발주아이디",
+    "Placing Order Good Per Day": "일별 상품발주",
+    "Placing Order Goods": "상품발주",
     "Placing Order Id": "발주아이디",
     "Placing Orders": "발주서",
     "PlacingOrder Order Date": "발주일",
