--- a/lang/ko.json
+++ b/lang/ko.json
@@ -64,6 +64,7 @@
     "Box Orders": "박스 발주서",
     "Box Placing Order And Warehousing": "박스 발주 및 입고",
     "Box Price": "박스 가격",
+    "Box Quantity": "박수 수량",
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
     "Box Supplier": "박스 공급사",
@@ -278,6 +279,7 @@
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
     "Inventory Adjustment": "재고 조정",
+    "Inventory Histories": "재고 히스토리",
     "Inventory History": "재고(입출고) 이력",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
@@ -290,6 +292,7 @@
     "Invoice File": "운송장 파일",
     "Invoice File Age": "송장파일나이",
     "Invoice File Name": "운송장 파일 이름",
+    "Invoice File Page": "송장파일페이지",
     "Invoice File Path": "송장파일경로",
     "Invoice File Size": "운송장 파일 크기",
     "Invoice Filepath": "운송장 파일경로",
@@ -515,10 +518,10 @@
     "Placing Order And Warehousing": "상품 발주 및 입고",
     "Placing Order Boxes": "발주 박스",
     "Placing Order Count": "발주횟수",
-    "Placing Order Good": "발주 상품",
-    "Placing Order Good Id": "발주상품아이디",
-    "Placing Order Good Per Day": "일별 발주상품",
-    "Placing Order Goods": "발주 상품",
+    "Placing Order Good": "상품발주",
+    "Placing Order Good Id": "상품발주아이디",
+    "Placing Order Good Per Day": "일별 상품발주",
+    "Placing Order Goods": "상품발주",
     "Placing Order Id": "발주아이디",
     "Placing Orders": "발주서",
     "PlacingOrder Order Date": "발주일",
@@ -567,6 +570,7 @@
     "Receiver Cell Phone": "수령인 휴대폰",
     "Receiver Name": "수령인 이름",
     "Receiver Phone": "수령인 전화",
+    "Receiving": "입고",
     "Record": "기록",
     "Regards,": "안부,",
     "RegDt": "등록일시",
@@ -635,6 +639,7 @@
     "Shippable": "배송가능",
     "Shipped": "배송여부",
     "Shipped At": "배송일시",
+    "Shipping": "출고",
     "Shipping Cost Price": "출고 매입가",
     "Shipping Price": "출고 금액",
     "Shipping Quantity": "출고 수량",
