Change words for being clear

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -364,8 +364,8 @@
     "Min Order Price": "최소 발주 금액",
     "Misdirected Request": "잘못된 요청",
     "Mismatched Order Good Count": "미매칭 주문상품수",
-    "Mismatched Order Shipment": "미매칭 주문 출고",
-    "Mismatched Order Shipments": "미매칭 주문 상품들",
+    "Mismatched Order Shipment": "미매칭 주문출고",
+    "Mismatched Order Shipments": "미매칭 주문출고",
     "ModDt": "수정일",
     "Model": "모델",
     "Modified": "수정일",
@@ -469,10 +469,10 @@
     "Order Sheet File Size": "주문서 파일 크기",
     "Order Sheet Waybill": "주문서 운송장",
     "Order Sheet Waybills": "주문서 운송장",
-    "Order Shipment": "출고",
-    "Order Shipment Id": "주문서아이디",
-    "Order Shipment Per Day": "일별 주문서",
-    "Order Shipments": "출고",
+    "Order Shipment": "주문출고",
+    "Order Shipment Id": "주문서출고 아이디",
+    "Order Shipment Per Day": "일별 주문출고",
+    "Order Shipments": "주문출고",
     "OrderCellPhone": "주문자휴대전화",
     "Ordered": "발주시각",
     "Ordered At": "주문일시",
