--- a/lang/ko.json
+++ b/lang/ko.json
@@ -14,10 +14,6 @@
     "Actions": "액션들",
     "Add": "추가",
     "Add :name": ":name을 더하다",
-    "Add Ct Good": "상품 등록하기",
-    "Add Ct Order": "발주서 만들기",
-    "Add Ct Register Good Request": "상품등록요청하기",
-    "Add Go User": "고 유저 만들기",
     "Additional Information": "추가 정보",
     "Additional Option": "추가옵션",
     "Additional Option Price": "추가옵션가격",
@@ -164,8 +160,6 @@
     "Duplicate :name": "중복: 이름",
     "Edit": "수정",
     "Edit :name": "편집 :name",
-    "Edit Ct Order": "발주서 수정하기",
-    "Edit Ct Register Good Request": "상품등록요청 수정하기",
     "Edit Inventory": "재고 수정",
     "Email": "이메일",
     "email": ":Attribute은(는) 유효한 이메일 주소여야 합니다.",
@@ -202,9 +196,6 @@
     "Files": "파일",
     "Finished": "마감일",
     "Finished At": "마감일시",
-    "Finished Stock Amount": "기말 금액",
-    "FinishedCtGoodSnapshot Cost Price": "기말 단가",
-    "FinishedCtGoodSnapshot Inventory": "기말 수량",
     "FirstOrderRegDt": "첫주문 일시",
     "Fixed Price": "원가",
     "FixedPrice": "원가",
@@ -213,7 +204,6 @@
     "Forgot your password?": "비밀번호를 잊으셨나요?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "비밀번호를 잊으셨습니까? 이메일 주소를 입력하시면 새 비밀번호를 설정 할 수 있는 링크를 이메일로 보내드립니다.",
     "Found": "설립하다",
-    "GansikSaleAmt": "간식 총 구매액",
     "Gateway Timeout": "게이트웨이 시간 초과",
     "Generated Barcode": "생성 바코드",
     "Go Home": "홈으로 이동",
@@ -229,7 +219,6 @@
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
     "Good Sum Cost Price": "상품 총매입가",
     "Goods": "상품 리스트",
-    "Goods Division Color": "상품 구분색",
     "Goods Nm": "상품명",
     "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
@@ -273,7 +262,7 @@
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
     "Inventory Adjustment": "재고 조정",
-    "Inventory Histories": "재고 히스토리",
+    "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
     "Inventory Level 1": "재고 1등급",
     "Inventory Level 2": "재고 2등급",
@@ -305,6 +294,7 @@
     "Is Warehoused": "입고가능유무",
     "Issuer": "요청자",
     "Item": "아이템",
+    "Item Division Color": "아이템 구분색",
     "Item Inventory Snapshot": "상품 재고 스냅샷",
     "Item Inventory Snapshots": "상품 재고 스냅샷",
     "Item Manual Warehousing": "아이템 수동 재고조정",
@@ -331,7 +321,6 @@
     "Length Required": "필요한 길이",
     "Like": "좋다",
     "List": "목록",
-    "List Ct Goods": "상품 리스트",
     "List Image": "리스트 이미지",
     "Live Preset Download": "실시간 프리셋 다운로드",
     "Load": "짐",
@@ -366,8 +355,8 @@
     "Min Order Price": "최소 발주 금액",
     "Misdirected Request": "잘못된 요청",
     "Mismatched Order Good Count": "미매칭 주문상품수",
-    "Mismatched Order Shipment": "미매칭 주문출고",
-    "Mismatched Order Shipments": "미매칭 주문출고",
+    "Mismatched Order Shipment": "미매칭 주문 출고",
+    "Mismatched Order Shipments": "미매칭 주문 출고",
     "ModDt": "수정일",
     "Model": "모델",
     "Modified": "수정일",
@@ -395,14 +384,6 @@
     "Network Read Timeout Error": "네트워크 읽기 시간 초과 오류",
     "New": "New",
     "New :name": "새로운 :name",
-    "New Ct Box": "박스 추가",
-    "New Ct Box Order": "박스 발주서 만들기",
-    "New Ct Good": "상품 등록",
-    "New Ct Order": "발주서 만들기",
-    "New Ct Order Good": "주문 상품 넣기",
-    "New Ct Order Sheet Waybill": "주문서 운송장 등록하기",
-    "New Ct Placing Order": "발주서 만들기",
-    "New Ct Smart Order": "스마트 발주서 만들기",
     "New Password": "새 비밀번호",
     "Newsletter Received User Count": "뉴스레터 수신자수",
     "Next": "다음",
@@ -471,10 +452,10 @@
     "Order Sheet File Size": "주문서 파일 크기",
     "Order Sheet Waybill": "주문서 운송장",
     "Order Sheet Waybills": "주문서 운송장",
-    "Order Shipment": "주문출고",
+    "Order Shipment": "주문 출고",
     "Order Shipment Id": "주문서출고 아이디",
-    "Order Shipment Per Day": "일별 주문출고",
-    "Order Shipments": "주문출고",
+    "Order Shipment Per Day": "일별 주문 출고",
+    "Order Shipments": "주문 출고",
     "OrderCellPhone": "주문자휴대전화",
     "Ordered": "발주시각",
     "Ordered At": "주문일시",
@@ -509,10 +490,10 @@
     "Placing Order Boxes": "발주 박스",
     "Placing Order Count": "발주횟수",
     "Placing Order Id": "발주아이디",
-    "Placing Order Item": "상품발주",
-    "Placing Order Item Id": "상품발주아이디",
-    "Placing Order Item Per Day": "일별 상품발주",
-    "Placing Order Items": "상품발주",
+    "Placing Order Item": "발주 아이템",
+    "Placing Order Item Id": "발주 아이템 아이디",
+    "Placing Order Item Per Day": "일별 발주 아이템",
+    "Placing Order Items": "발주 아이템",
     "Placing Orders": "발주서",
     "PlacingOrder Order Date": "발주일",
     "PlacingOrder Status": "발주상태",
@@ -569,7 +550,6 @@
     "Register Good Requests": "상품등록/수정요청",
     "Register Import Files": "임포트파일 등록",
     "Register Option Good Request": "옵션상품 등록/수정 요청",
-    "Related Ct Order Goods": "관련 발주 상품 리스트",
     "Remember Me": "로그인 상태 유지",
     "Remember me": "로그인 상태 유지",
     "Request File Url": "요청파일",
@@ -663,9 +643,6 @@
     "Start Price": "시작 가격",
     "Started": "시작일",
     "Started At": "시작일시",
-    "Started Stock Amount": "기초 금액",
-    "StartedCtGoodSnapshot Cost Price": "기초 단가",
-    "StartedCtGoodSnapshot Inventory": "기초 수량",
     "Status": "상태",
     "Status Date": "상태일",
     "StockFl": "판매 재고 여부",
