--- a/lang/ko.json
+++ b/lang/ko.json
@@ -733,6 +733,7 @@
     "Unauthorized": "인증되지 않음",
     "Unavailable For Legal Reasons": "법적인 이유로 사용할 수 없음",
     "Unit Price": "단가",
+    "Units Per Case": "입수량",
     "Unknown Error": "알수없는 오류",
     "Unpack": "짐 등에서 꺼내다",
     "Unprocessable Entity": "처리할 수 없는 항목",
