Separate `Item` with `Good`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -211,14 +211,14 @@
     "Godo Code": "올라펫샵 상품코드",
     "Godo Name": "자사몰 상품명",
     "Gone": "다 쓴",
-    "Good": "상품",
+    "Good": "일반상품",
     "Good Classification": "상품 분류",
     "Good Code": "상품 코드",
     "Good Count": "상품갯수",
     "Good Per Day": "일별 상품",
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
     "Good Sum Cost Price": "상품 총매입가",
-    "Goods": "상품 리스트",
+    "Goods": "일반상품",
     "Goods Nm": "상품명",
     "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
@@ -261,6 +261,7 @@
     "Invalid JSON was returned from the route.": "경로에서 잘못된 JSON이 반환되었습니다.",
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
+    "Inventory & Warehousing": "인벤토리 & 입출고",
     "Inventory Adjustment": "재고 조정",
     "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
@@ -302,6 +303,7 @@
     "Item Manual Warehousing Type": "아이템 재고조정 타입",
     "Item Manual Warehousings": "아이템 수동 재고조정",
     "Items": "아이템",
+    "Items & Boxes": "아이템 & 박스",
     "Last Cost Price": "최근 매입가",
     "Last Order Count": "실매입개수",
     "Last Order Price": "실매입가격",
@@ -427,6 +429,7 @@
     "OptionGood Playauto Master Code": "옵션상품 P코드",
     "Order": "주문",
     "Order #:order_id must have a order shipment.": "#:order_id 주문은 적어도 하나의 주문서/출고가 있어야 합니다.",
+    "Order & Shipping": "주문 & 출고",
     "Order Cell Phone": "주문 휴대폰",
     "Order Count": "주문수",
     "Order Date": "주문 일",
@@ -670,8 +673,11 @@
     "Supplier Id": "공급사아이디",
     "Supplier Modified": "공급사수정일",
     "Supplier Monitoring Interruption": "공모가위반시공급중단",
+    "Supplier monitoring Interruption": "공급사모니터링중지",
     "Supplier Monitoring Price": "공급사 모니터링 가격",
+    "Supplier monitoring Price": "공급사모니터링가격",
     "Supplier Monitoring Status": "공급사 모니터링 상태",
+    "Supplier monitoring Status": "공급사모니터링상태",
     "Supplier Name": "공급사 이름",
     "Supplier Out Of Stock Count": "공급사 품절 횟수",
     "Supplier Out Of Stock Off Datetime": "공급사 품절 해제일",
@@ -727,6 +733,7 @@
     "TotalOrderGoodCount": "총 상품 주문 횟수",
     "TotalPrice": "판매가",
     "TotalStock": "통합 재고량",
+    "Tracking": "이력",
     "Translate": "번역하다",
     "Translate It": "번역하세요",
     "Type": "타입",
