Separate with `Item` and `Good`

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -219,6 +219,7 @@
     "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
     "Good Sum Cost Price": "상품 총매입가",
     "Goods": "일반상품",
+    "Goods Code": "상품코드",
     "Goods Nm": "상품명",
     "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
@@ -415,7 +416,7 @@
     "Option Count": "옵션수",
     "Option Good": "옵션상품",
     "Option Good Option": "옵션상품 옵션",
-    "Option Good Optionable": "옵션상품 옵션종류",
+    "Option Good Optionable": "옵션상품 옵션 종류",
     "Option Good Options": "옵션상품 옵션",
     "Option Goods": "옵션상품",
     "Option Image": "옵션이미지",
