Rename some words

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -213,10 +213,9 @@
     "Gone": "다 쓴",
     "Good": "일반상품",
     "Good Classification": "상품 분류",
-    "Good Code": "상품 코드",
+    "Good Code": "상품코드",
     "Good Count": "상품갯수",
-    "Good Per Day": "일별 상품",
-    "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
+    "Good Per Day": "일별 일반상품",
     "Good Sum Cost Price": "상품 총매입가",
     "Goods": "일반상품",
     "Goods Code": "상품코드",
@@ -345,9 +344,6 @@
     "Margin 3 Percent Price": "3%마진가",
     "Margin 5 Percent Price": "5%마진가",
     "Margin Zero Percent Price": "0%마진가",
-    "Master Code": "마스터코드",
-    "Master Goods Cd": "마스터 상품코드",
-    "MasterGoodsCd": "플레이오토 마스터코드",
     "MemId": "회원 아이디",
     "MemNm": "회원 이름",
     "MemNo": "회원 번호",
@@ -426,8 +422,6 @@
     "Option Yn": "옵션 사용 여부",
     "OptionCount": "옵션갯수",
     "OptionFl": "옵션 사용 여부",
-    "OptionGood not found for :key => :option": "옵션상품의 마스터코드 :key, 이름 :option 에 해당하는 옵션이 없습니다.",
-    "OptionGood Playauto Master Code": "옵션상품 P코드",
     "Order": "주문",
     "Order #:order_id must have a order shipment.": "#:order_id 주문은 적어도 하나의 주문서/출고가 있어야 합니다.",
     "Order & Shipping": "주문 & 출고",
@@ -470,7 +464,6 @@
     "Orders": "주문",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
-    "Original Master Code": "원본 마스터코드",
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
@@ -606,7 +599,6 @@
     "Services": "서비스",
     "Session Has Expired": "세션이 만료됨",
     "Set Goods": "세트상품",
-    "SetGood Playauto Master Code": "세트상품 플레이오토마스터코드",
     "Setting": "설정",
     "Settings": "설정",
     "Ship Quantity": "배송 수량(주문 단위)",
@@ -620,7 +612,7 @@
     "Shipping Suggested Selling Price": "출고 판매제안가",
     "Shipping Unit Price": "출고 단가",
     "Shorten Code": "축약 코드",
-    "Shortening Master Code": "축약 마스터코드",
+    "Shortening Goods Code": "축약 상품코드",
     "Show": "보여주다",
     "Show :name": "쇼 :name",
     "Show All": "모두 보이기",
