--- a/lang/ko.json
+++ b/lang/ko.json
@@ -211,14 +211,14 @@
     "Godo Code": "올라펫샵 상품코드",
     "Godo Name": "자사몰 상품명",
     "Gone": "다 쓴",
-    "Good": "상품",
+    "Good": "일반상품",
     "Good Classification": "상품 분류",
-    "Good Code": "상품 코드",
+    "Good Code": "상품코드",
     "Good Count": "상품갯수",
-    "Good Per Day": "일별 상품",
-    "Good Playauto Master Code": "일반상품 플레이오토마스터코드",
+    "Good Per Day": "일별 일반상품",
     "Good Sum Cost Price": "상품 총매입가",
-    "Goods": "상품 리스트",
+    "Goods": "일반상품",
+    "Goods Code": "상품코드",
     "Goods Nm": "상품명",
     "Goods Per Shutdown": "판매중지여부별 상품수",
     "Goods Price": "판매가",
@@ -261,6 +261,7 @@
     "Invalid JSON was returned from the route.": "경로에서 잘못된 JSON이 반환되었습니다.",
     "Invalid SSL Certificate": "잘못된 SSL 인증서",
     "Inventory": "재고 수량",
+    "Inventory & Warehousing": "인벤토리 & 입출고",
     "Inventory Adjustment": "재고 조정",
     "Inventory Histories": "재고(입출고) 이력",
     "Inventory History": "재고(입출고) 이력",
@@ -302,6 +303,7 @@
     "Item Manual Warehousing Type": "아이템 재고조정 타입",
     "Item Manual Warehousings": "아이템 수동 재고조정",
     "Items": "아이템",
+    "Items & Boxes": "아이템 & 박스",
     "Last Cost Price": "최근 매입가",
     "Last Order Count": "실매입개수",
     "Last Order Price": "실매입가격",
@@ -342,9 +344,6 @@
     "Margin 3 Percent Price": "3%마진가",
     "Margin 5 Percent Price": "5%마진가",
     "Margin Zero Percent Price": "0%마진가",
-    "Master Code": "마스터코드",
-    "Master Goods Cd": "마스터 상품코드",
-    "MasterGoodsCd": "플레이오토 마스터코드",
     "MemId": "회원 아이디",
     "MemNm": "회원 이름",
     "MemNo": "회원 번호",
@@ -413,7 +412,7 @@
     "Option Count": "옵션수",
     "Option Good": "옵션상품",
     "Option Good Option": "옵션상품 옵션",
-    "Option Good Optionable": "옵션상품 옵션종류",
+    "Option Good Optionable": "옵션상품 옵션 종류",
     "Option Good Options": "옵션상품 옵션",
     "Option Goods": "옵션상품",
     "Option Image": "옵션이미지",
@@ -423,10 +422,9 @@
     "Option Yn": "옵션 사용 여부",
     "OptionCount": "옵션갯수",
     "OptionFl": "옵션 사용 여부",
-    "OptionGood not found for :key => :option": "옵션상품의 마스터코드 :key, 이름 :option 에 해당하는 옵션이 없습니다.",
-    "OptionGood Playauto Master Code": "옵션상품 P코드",
     "Order": "주문",
     "Order #:order_id must have a order shipment.": "#:order_id 주문은 적어도 하나의 주문서/출고가 있어야 합니다.",
+    "Order & Shipping": "주문 & 출고",
     "Order Cell Phone": "주문 휴대폰",
     "Order Count": "주문수",
     "Order Date": "주문 일",
@@ -466,7 +464,6 @@
     "Orders": "주문",
     "Origin": "원산지",
     "Origin Is Unreachable": "원본에 연결할 수 없음",
-    "Original Master Code": "원본 마스터코드",
     "Other Shipping Quantity": "기타 출고 수량",
     "Other Shop Sale Option Count": "타사몰 판매가능 옵션수",
     "Other Wearing Quantity": "기타 입고 수량",
@@ -602,7 +599,6 @@
     "Services": "서비스",
     "Session Has Expired": "세션이 만료됨",
     "Set Goods": "세트상품",
-    "SetGood Playauto Master Code": "세트상품 플레이오토마스터코드",
     "Setting": "설정",
     "Settings": "설정",
     "Ship Quantity": "배송 수량(주문 단위)",
@@ -616,7 +612,7 @@
     "Shipping Suggested Selling Price": "출고 판매제안가",
     "Shipping Unit Price": "출고 단가",
     "Shorten Code": "축약 코드",
-    "Shortening Master Code": "축약 마스터코드",
+    "Shortening Goods Code": "축약 상품코드",
     "Show": "보여주다",
     "Show :name": "쇼 :name",
     "Show All": "모두 보이기",
@@ -670,8 +666,11 @@
     "Supplier Id": "공급사아이디",
     "Supplier Modified": "공급사수정일",
     "Supplier Monitoring Interruption": "공모가위반시공급중단",
+    "Supplier monitoring Interruption": "공급사모니터링중지",
     "Supplier Monitoring Price": "공급사 모니터링 가격",
+    "Supplier monitoring Price": "공급사모니터링가격",
     "Supplier Monitoring Status": "공급사 모니터링 상태",
+    "Supplier monitoring Status": "공급사모니터링상태",
     "Supplier Name": "공급사 이름",
     "Supplier Out Of Stock Count": "공급사 품절 횟수",
     "Supplier Out Of Stock Off Datetime": "공급사 품절 해제일",
@@ -727,6 +726,7 @@
     "TotalOrderGoodCount": "총 상품 주문 횟수",
     "TotalPrice": "판매가",
     "TotalStock": "통합 재고량",
+    "Tracking": "이력",
     "Translate": "번역하다",
     "Translate It": "번역하세요",
     "Type": "타입",
