Add `clients` table and things to be needed

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -130,6 +130,7 @@
     "Created At": "생성일",
     "Current Password": "현재 비밀번호",
     "Customer Price": "소비자가",
+    "Customers": "고객",
     "Daily Registered User Count": "신규회원수",
     "Dashboard": "대시보드",
     "Dashboards": "대시보드",
@@ -470,6 +471,7 @@
     "Page Expired": "만료된 페이지",
     "Pagination Navigation": "페이지네이션 내비게이션",
     "Partial Content": "부분 콘텐츠",
+    "Partners": "파트너",
     "Password": "비밀번호",
     "password": "비밀번호가 잘못되었습니다.",
     "Password Confirmation": "비밀번호 확인",
