--- a/lang/ko.json
+++ b/lang/ko.json
@@ -70,6 +70,7 @@
     "BrandCd": "브랜드코드",
     "Browse": "검색",
     "Bundled Goods": "묶음 상품",
+    "Business Management": "거래처 관리",
     "CachedEsGood GoodsPrice": "올라펫샵판매가",
     "Can Be Shipped": "출고가능",
     "Cancel": "취소",
@@ -401,6 +402,7 @@
     "Not Modified": "수정되지 않음",
     "of": "의",
     "Off Sale": "판매중지",
+    "Offline Order & Shipping": "오프라인 주문출고",
     "OK": "좋아요",
     "On Sale": "판매중",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "계정을 삭제하면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 삭제하기 전에 유지하려는 필요한 데이터 또는 정보를 다운로드하세요.",
@@ -474,7 +476,6 @@
     "Page Expired": "만료된 페이지",
     "Pagination Navigation": "페이지네이션 내비게이션",
     "Partial Content": "부분 콘텐츠",
-    "Partners": "파트너",
     "Password": "비밀번호",
     "password": "비밀번호가 잘못되었습니다.",
     "Password Confirmation": "비밀번호 확인",
