Add `clients` table and some things to be helpful (#61)
* Add `clients` table and things to be needed

* Remove `ko_KR`s

* Rename `masterGoodsCd` to `goodsCd`

* Fix a bug

* Make a control of views

* Coordinate menu

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -70,6 +70,7 @@
     "BrandCd": "브랜드코드",
     "Browse": "검색",
     "Bundled Goods": "묶음 상품",
+    "Business Management": "거래처 관리",
     "CachedEsGood GoodsPrice": "올라펫샵판매가",
     "Can Be Shipped": "출고가능",
     "Cancel": "취소",
@@ -130,6 +131,7 @@
     "Created At": "생성일",
     "Current Password": "현재 비밀번호",
     "Customer Price": "소비자가",
+    "Customers": "고객",
     "Daily Registered User Count": "신규회원수",
     "Dashboard": "대시보드",
     "Dashboards": "대시보드",
@@ -270,6 +272,7 @@
     "Inventory Level 3": "재고 3등급",
     "Inventory Level 4": "재고 4등급",
     "Inventory Level X": "재고 X등급",
+    "Inventory Management": "재고 관리",
     "Inventory Multiply Cost Price": "재고x매입가",
     "Is Active": "운영중",
     "Is All Good Matched": "모든 상품 매칭 여부",
@@ -296,6 +299,8 @@
     "Issuer": "요청자",
     "Item": "아이템",
     "Item Division Color": "아이템 구분색",
+    "Item Inventory Histories": "아이템 재고 이력",
+    "Item Inventory History": "아이템 재고 이력",
     "Item Inventory Snapshot": "상품 재고 스냅샷",
     "Item Inventory Snapshots": "상품 재고 스냅샷",
     "Item Manual Warehousing": "아이템 수동 재고조정",
@@ -397,10 +402,12 @@
     "Not Modified": "수정되지 않음",
     "of": "의",
     "Off Sale": "판매중지",
+    "Offline Order & Shipping": "오프라인 주문출고",
     "OK": "좋아요",
     "On Sale": "판매중",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "계정을 삭제하면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 삭제하기 전에 유지하려는 필요한 데이터 또는 정보를 다운로드하세요.",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "계정이 삭제되면 모든 리소스와 데이터가 영구적으로 삭제됩니다. 계정을 영구적으로 삭제할 것인지 확인하기 위해 암호를 입력하십시오.",
+    "Online Order & Shipping": "온라인 주문출고",
     "Open": "열려 있는",
     "Open in a current window": "현재 창에서 열기",
     "Open in a new window": "새 창에서 열기",
@@ -424,7 +431,6 @@
     "OptionFl": "옵션 사용 여부",
     "Order": "주문",
     "Order #:order_id must have a order shipment.": "#:order_id 주문은 적어도 하나의 주문서/출고가 있어야 합니다.",
-    "Order & Shipping": "주문 & 출고",
     "Order Cell Phone": "주문 휴대폰",
     "Order Count": "주문수",
     "Order Date": "주문 일",
@@ -530,6 +536,7 @@
     "Promotion Code": "프로모션 코드",
     "Promotion Codes": "프로모션 코드",
     "Proxy Authentication Required": "프록시 인증 필요",
+    "Purchase Ordering": "구매 발주",
     "Quantity": "수량",
     "Quantity In Box": "입수량",
     "Railgun Error": "레일건 오류",
