Rename `placing` to `purchase` like WMS standards

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -58,8 +58,8 @@
     "Box Manual Warehousings": "박스 수동 재고 조정",
     "Box Order": "박스 발주",
     "Box Orders": "박스 발주서",
-    "Box Placing Order And Warehousing": "박스 발주 및 입고",
     "Box Price": "박스 가격",
+    "Box Purchase Order And Warehousing": "박스 발주 및 입고",
     "Box Quantity": "박수 수량",
     "Box Sum Cost Price": "박스 총매입가",
     "Box Sum Inventory": "박스 총재고",
@@ -488,20 +488,6 @@
     "Picking Zone": "피킹존",
     "Picking Zone Number": "피킹존 번호",
     "Picking Zones": "피킹존",
-    "Placing Order": "발주",
-    "Placing Order And Warehousing": "상품 발주 및 입고",
-    "Placing Order Boxes": "발주 박스",
-    "Placing Order Count": "발주횟수",
-    "Placing Order Id": "발주아이디",
-    "Placing Order Item": "발주 아이템",
-    "Placing Order Item Id": "발주 아이템 아이디",
-    "Placing Order Item Per Day": "일별 발주 아이템",
-    "Placing Order Items": "발주 아이템",
-    "Placing Orders": "발주서",
-    "PlacingOrder Order Date": "발주일",
-    "PlacingOrder Status": "발주상태",
-    "PlacingOrder Total Good Count": "발주총상품수",
-    "PlacingOrder Total Order Price": "발주총금액",
     "Playauto": "플레이오토",
     "Playauto Categories": "플레이오토 카테고리",
     "Playauto Category": "플레이오토 카테고리",
@@ -536,7 +522,21 @@
     "Promotion Code": "프로모션 코드",
     "Promotion Codes": "프로모션 코드",
     "Proxy Authentication Required": "프록시 인증 필요",
+    "Purchase Order": "발주",
+    "Purchase Order And Warehousing": "상품 발주 및 입고",
+    "Purchase Order Boxes": "발주 박스",
+    "Purchase Order Count": "발주횟수",
+    "Purchase Order Id": "발주아이디",
+    "Purchase Order Item": "발주 아이템",
+    "Purchase Order Item Id": "발주 아이템 아이디",
+    "Purchase Order Item Per Day": "일별 발주 아이템",
+    "Purchase Order Items": "발주 아이템",
     "Purchase Ordering": "구매 발주",
+    "Purchase Orders": "발주서",
+    "PurchaseOrder Order Date": "발주일",
+    "PurchaseOrder Status": "발주상태",
+    "PurchaseOrder Total Good Count": "발주총상품수",
+    "PurchaseOrder Total Order Price": "발주총금액",
     "Quantity": "수량",
     "Quantity In Box": "입수량",
     "Railgun Error": "레일건 오류",
@@ -721,8 +721,8 @@
     "Total No Sale Good Count": "판매중지상품수",
     "Total Order Price": "총 발주 금액",
     "Total Order Shipment": "총 주문서",
-    "Total Placing Order Good": "총 발주상품",
     "Total Price": "전체가격",
+    "Total Purchase Order Good": "총 발주상품",
     "Total Sale Count": "총 판매갯수",
     "Total Sale Good Count": "판매상품수",
     "Total Sale Price": "총 판매금액",
